--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -65,7 +65,7 @@
             <div class="card-body px-lg-5 pt-0">
         
                 <!-- Form -->
-                <form class="text-center" action="/signup/adduser" style="color: #757575;" onsubmit="return validate()">
+                <form class="text-center" action="/signup/adduser" method="POST" style="color: #757575;" onsubmit="return validate()"><!--part #2 point #10-->
         
                     <div class="form-row">
                         <div class="col">
@@ -95,9 +95,6 @@
 
                     </div>
         
-
-        
-
         
                     <!-- Password -->
                     <div class="md-form mt-0">
