--- a/src/views/addauthor.ejs
+++ b/src/views/addauthor.ejs
@@ -16,7 +16,7 @@
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
-
+     
         <!-- Navbar brand -->
         <!-- <a class="navbar-brand" href="/home"><i class="fas fa-home"></i></a> -->
         <a class="navbar-brand" href="/home">Pustakam.Com</a>
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="basicExampleNav">
       
           <!-- Links -->
-          <ul class="navbar-nav ml-auto">
+          <!-- <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/authors">Authors
                 <span class="sr-only">(current)</span>
@@ -49,7 +49,8 @@
 
     
       
-          </ul>
+          </ul> -->
+          <%- include('partials/navbar.ejs') -%>
           <!-- Links -->
       
           <form class="form-inline">
