--- a/src/views/addbook.ejs
+++ b/src/views/addbook.ejs
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="basicExampleNav">
       
           <!-- Links -->
-          <ul class="navbar-nav ml-auto">
+          <!-- <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/authors">Authors
                 <span class="sr-only">(current)</span>
@@ -49,7 +49,8 @@
 
     
       
-          </ul>
+          </ul> -->
+          <%- include('partials/navbar.ejs') -%>
           <!-- Links -->
       
           <form class="form-inline">
