--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="basicExampleNav">
       
           <!-- Links -->
-          <ul class="navbar-nav ml-auto">
+          <!-- <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/authors">Authors
                 <span class="sr-only">(current)</span>
@@ -51,10 +51,8 @@
             <li class="nav-item active">
                   <a class="nav-link" href="/authors/addauthor">Add Author</a>
             </li>
-
-    
-      
-          </ul>
+          </ul> -->
+          <%- include('partials/navbar.ejs') -%>
           <!-- Links -->
       
           <form class="form-inline">
@@ -90,11 +88,13 @@
 
                         <form action="/books/edit" method="POST">
                         <input type="hidden" name="id" value="<%=book._id%>">
+                       
                         <button id="editbtn" type="submit" class = "btn btn-success btn-sm" style="float: right;">Edit Book</button>
                         </form>
 
                         <form action="/books/delete" method="POST">
-                        <input type="hidden" name="id" value="<%=book._id%>">
+                        <input type="hidden" name="id" value="<%=book._id%>" >
+                       
                         <button id="dltbtn" type="submit" class = "btn btn-danger btn-sm" style="float: right; margin-right: 25px">Delete Book</button>
                         </form>
 
