--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="basicExampleNav">
           
               <!-- Links -->
-              <ul class="navbar-nav ml-auto">
+              <!-- <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="/authors">Authors
                     <span class="sr-only">(current)</span>
@@ -51,10 +51,8 @@
                 <li class="nav-item active">
                       <a class="nav-link" href="/authors/addauthor">Add Author</a>
                 </li>
-
-        
-          
-              </ul>
+              </ul> -->
+              <%- include('partials/navbar.ejs') -%>
               <!-- Links -->
           
               <form class="form-inline">
