--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="basicExampleNav">
       
           <!-- Links -->
-          <ul class="navbar-nav ml-auto">
+          <!-- <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/authors">Authors
                 <span class="sr-only">(current)</span>
@@ -48,10 +48,8 @@
             <li class="nav-item active">
                   <a class="nav-link" href="/authors/addauthor">Add Author</a>
             </li>
-
-    
-      
-          </ul>
+          </ul> -->
+          <%- include('partials/navbar.ejs') -%>
           <!-- Links -->
       
           <form class="form-inline">
