--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -65,7 +65,7 @@
             </div>
             <br>
 
-            <form class='col-12' action="/login/check" onsubmit="return validate()" method="GET">
+            <form class='col-12' action="/login/check" onsubmit="return validate()" method="POST"><!--part #2 point #10-->
 
               <div class="form-group">
                 <input id="uid" name="uid" class='form-control' type="email" placeholder="Enter Username(email id)" id="mail" required>
