--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -52,7 +52,7 @@
                   <a class="nav-link" href="/authors/addauthor">Add Author</a>
             </li>
           </ul> -->
-          <%- include('partials/navbar.ejs') -%>
+          <%- include('partials/navbar.ejs') -%><!--part #2 point #6-->
           <!-- Links -->
       
           <form class="form-inline">
