--- a/src/views/author.ejs
+++ b/src/views/author.ejs
@@ -50,7 +50,7 @@
     
       
           </ul> -->
-          <%- include('partials/navbar.ejs') -%>
+          <%- include('partials/navbar.ejs') -%> <!--part #2 point #6-->
           <!-- Links -->
       
           <form class="form-inline">
